1.16.5 backport
and stopped here, this will be the only update